tests/garbagedb4-result.txt
tests/garbagedb4:1: parser error : Start tag expected, '<' not found
This is just some garbage which we can not read.
^
error: file error failed to parse xml document 'tests/garbagedb4'.
error: (null)
